--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.4"
   },
   "devDependencies": {
+    "@types/node": "^14.14.25",
     "@vitejs/plugin-vue": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.6.0",
     "@vuedx/typescript-plugin-vue": "^0.6.0",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.7",
+    "sass": "^1.32.6",
+    "tailwindcss": "^2.0.3",
     "typescript": "^4.1.3",
     "vite": "^2.0.0-beta.50"
   }
