--- a/package.json
+++ b/package.json
@@ -4,19 +4,26 @@
   "scripts": {
     "dev": "vite",
     "build": "vuedx-typecheck . && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "dependencies": {
     "vue": "^3.0.5",
     "vue-router": "^4.0.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
     "@vitejs/plugin-vue": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.6.0",
     "@vuedx/typescript-plugin-vue": "^0.6.0",
     "autoprefixer": "^10.2.5",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "postcss": "^8.2.7",
     "sass": "^1.32.6",
     "tailwindcss": "^2.0.3",
