--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "@vitejs/plugin-vue": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "@vuedx/typecheck": "^0.6.0",
     "@vuedx/typescript-plugin-vue": "^0.6.0",
     "autoprefixer": "^10.2.5",
     "babel-jest": "^26.6.3",
+    "eslint": "^7.21.0",
+    "eslint-plugin-vue": "^7.7.0",
     "jest": "^26.6.3",
     "postcss": "^8.2.7",
     "sass": "^1.32.6",
